# numpy2gpt

./: .pre-commit-config.yaml  README.md  gradient_descent.py  newton_method.py  pyproject.toml  sphere_func.py  tmp.py
.github/workflows/: main.yml  python-app.yml
docs/: deep-dive-into-autograd.md  deep-dive-into-gradients-of-backward.md
tests/torch/: test_core.py  test_functions.py  test_utils.py  utils.py
torch/: __init__.py  core.py  core_simple.py  functions.py  measure_memory.py  priority_queue.py  types.py  utils.py
